--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,14 @@ input[type="text"]:focus {
   outline: none;
 }
 
+input[type="email"] {
+  width: 100%;
+}
+
+input[type="email"]:focus {
+  outline: none;
+}
+
 input[type="password"] {
   width: 100%;
 }
@@ -147,4 +155,45 @@ p {
 .user-type {
   padding: 20px;
   border: 1px solid #545454;
+}
+
+.alert {
+  background-color: #FFE088;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 45px;
+  aspect-ratio: 1;
+  --c: no-repeat linear-gradient(#000 0 0);
+  background:
+    var(--c) 0% 50%,
+    var(--c) 50% 50%,
+    var(--c) 100% 50%;
+  background-size: 20% 100%;
+  animation: l1 1s infinite linear;
+}
+
+@keyframes l1 {
+  0% {
+    background-size: 20% 100%, 20% 100%, 20% 100%
+  }
+
+  33% {
+    background-size: 20% 10%, 20% 100%, 20% 100%
+  }
+
+  50% {
+    background-size: 20% 100%, 20% 10%, 20% 100%
+  }
+
+  66% {
+    background-size: 20% 100%, 20% 100%, 20% 10%
+  }
+
+  100% {
+    background-size: 20% 100%, 20% 100%, 20% 100%
+  }
 }
